...
                            decoration: BoxDecoration(
                                color: appPurple,
                                borderRadius: BorderRadius.circular(18)
                            ),
                            child: Padding(
                              padding: const EdgeInsets.symmetric(horizontal: 12),
                              child: Text('Export',style: appFont(12, Colors.white),),
                            )),
                      ),
                    ],
                  ),

                  Text('See how your investments can reach ₹${mainTargetData.targetAmount} Cr by ${mainTargetData.targetYear}.',style: appFont(10, appGrey),),
...
                        children:[
                          Row(
                            children: [

                              legend('Mutual Fund',appPurple),
                              legendSpacer(),
                              legend('Stocks',appTeal),
                              legendSpacer(),
                              legend('SIP Growth',appBlue),




...
                          priceIndicator('Required SIP (5yrs)','2.72 Lakh/month'),
                          Text(
                            '➜',
                            style: appFont(12, appPurple),
                          ),
                          priceIndicator('Inflation Adjusted','${calculateInflationAdjustedFV(expectedReturnRate: 15,
                          inflationRate: double.parse(mainTargetData.inflationRate),sipPerMonth: totalSipPerMonth(targetData.mutualFunds),years:( int.parse(mainTargetData.phases.first.$1)) -  int.parse(mainTargetData.phases.last.$2))}'),
                          Text(
                            '-',
                            style: appFont(12, appPurple),
                          ),
                          priceIndicator('Future Value','7.05 Cr'),
                          Text(
...
          return Card(
            margin: const EdgeInsets.symmetric(horizontal: 16, vertical: 8),
            child: ListTile(
              title: Text(item.title, style: const TextStyle(fontWeight: FontWeight.bold)),
              subtitle: Text(
                'Phase 1: ₹${item.phase1.toStringAsFixed(2)}\n'
                    'Phase 2: ₹${item.phase2.toStringAsFixed(2)}\n'
                    'Phase 3: ₹${item.phase3.toStringAsFixed(2)}',
              ),
            ),
          );
        },
      ),
    );
...
  //   List<FlSpot> points = [];
  //
  //   for (int stockIndex = 0; stockIndex < stocks.length ; stockIndex++) {
  //     final stock = stocks[stockIndex];
  //
  //     print("Stock ${stockIndex + 1}:");
  //     print("Quantity: ${stock.quantity}");
  //     print("Company: ${stock.company}");
  //     print("Buy Price: ${stock.buyPrice}");
  //     print("Phases: ${stock.phaseInvestments}");
  //
  //     int quantity = stock.quantity;
  //     double buyPrice = stock.buyPrice ?? 100.0;
...
          );
        }

        print('Year $year: corpus after interest and contribution: ₹${corpus.toStringAsFixed(2)}, total point y: ₹${points[year].y.toStringAsFixed(2)}');

        // Update corpus for next year: add contribution then apply interest
        corpus = (corpus + annualContribution) * (1 + rate);
      }
    }

    print('Final PF Points: $points');
    return points;
  }
...
